<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="MAIN" Id="{7650379b-af73-431c-a084-bfa6692fa016}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR

END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[
DB_Lesen_r134a();

WaagenAuslesen();
Auslesen_Modbus();
ModbusRTU_COM();
ModbusRTU_EL();
Temperatur();
Schwerpunkt_Eismasse();

(*Prüfen ob neu initialisiert werden muss*)
IF SM.bNeuInitialisieren THEN 		
	SM.Status:= Initialisieren;
	SM.bLeerlauf:=TRUE;
END_IF


CASE SM.Status OF
	

Initialisieren: 

	IF 
	//======nächster Modus====
		SM.Status:= Lesen;
	END_IF
	
Lesen: //Input von Klemmen Lesen und in native Werte umrechen

	Temperatur();
	

(*SM wird entweder auf Kühlen- oder einen der drei Abtau-Modi gestellt*)
	IF bKuehlen THEN 	
	//======nächster Modus====	
		SM.Status:=Kuehlen; //Regelbetrieb
	END_IF 
	
//Abtau-Modus wird gewählt		
	IF SM.bAbtauen_elektrisch THEN				
				SM.bAbtauen_Heissgas_oben 		:= FALSE;
				SM.bAbtauen_Heissgas_unten 		:= FALSE;
				SM.bManuellerModus				:= FALSE;
			
			bAnlagenschutzModus:=TRUE;
		//======nächster Modus====			
			SM.Status := Abtauen;
		END_IF
		
		IF SM.bAbtauen_Heissgas_oben THEN
				SM.bAbtauen_elektrisch			:=FALSE;
				SM.bAbtauen_Heissgas_unten 		:=FALSE;
				SM.bManuellerModus				:=FALSE;
	
			bAnlagenschutzModus:=TRUE;
		//======nächster Modus====			
			SM.Status := Abtauen;
		END_IF
		
		IF SM.bAbtauen_Heissgas_unten THEN
				SM.bAbtauen_elektrisch			:=FALSE;
				SM.bAbtauen_Heissgas_oben 		:=FALSE;
				SM.bManuellerModus				:=FALSE;
			
			bAnlagenschutzModus:=TRUE;
		//======nächster Modus====			
			SM.Status := Abtauen;
		END_IF
	
	IF NOT bKuehlen AND NOT bAbtauen_Heissgas_unten AND NOT bAbtauen_Heissgas_oben AND NOT bAbtauen_elektrisch THEN 
		SM.bFehler:= TRUE;
		//======nächster Modus====	
			SM.Status := Leerlauf;
	END_IF
	
				
Kuehlen:	// Der Verdampfer vereist. Der Timer "TimerVereisung" bestimmt die Zeit der Vereisung.

		//======nächster Modus====
			SM.Status:=Vollautomatik;  // Es wird automatisch in den Vollautomatik-Modus gewechselt, falls bManuellerModus-> FALSE ist

			IF SM.bManuellerModus THEN
				SM.bVollautomatikModbus			:= FALSE;
				SM.bAbtauen_Heissgas_oben 		:= FALSE;
				SM.bAbtauen_Heissgas_unten 		:= FALSE;
				SM.bAbtauen_elektrisch			:= FALSE;	
		//======nächster Modus====
			SM.Status:=Manuell;	
			END_IF
	
			
Vollautomatik:	// Alle Regler sind Aktiv und regeln auf Normalbetrieb
				
	 	SM.bVollautomatikModbus 			:= TRUE;
		SM.bManuellerModus					:=FALSE;
		
	Vereisung();
		
	//======nächster Modus====					
		SM.Status:=Anlagenschutz;
			
Manuell: // Regler müssen manuell auf Aktiv umgestellt werden

		
	//======nächster Modus====					
		SM.Status:=Anlagenschutz;
		
		
Abtauen: //Der Verdampfer wird abgetaut. Über GVL wird der Abtaumodus ausgewählt	
	
	Abtauung();
	
	//======nächster Modus====					
		SM.Status:=Anlagenschutz;
		
Anlagenschutz: //Anlagenschutzsysteme überschreiben ggf. Anweisungen

	//======nächster Modus====					
		SM.Status:=Schreiben;

		
Schreiben:		//Native Werte werden zurückgerechnet und an Klemmen übergeben

	Temperatur();
	
	//======nächster Modus====			
		SM.Status:=Lesen;
		
Leerlauf: 		//Status-Maschine springt in Leerlauf falls notwendige Bool-variablen nicht gesetzt sind oder die Initionlisierung noch Zeit benötigt

ELSE
	SM.bFehler := TRUE;
END_CASE

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>